--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "jeydi",
     "version": "1.0.0",
     "description": "",
-    "main": "./dist/index.html",
+    "main": "index.html",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "parcel watch ./dist/index.html"
+        "start": "parcel watch index.html"
     },
     "repository": {
         "type": "git",
@@ -23,16 +23,11 @@
         "babel": "^6.23.0",
         "babel-core": "^6.26.3",
         "babel-loader": "^8.2.2",
-        "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^5.0.1",
-        "html-webpack-plugin": "^4.5.1",
-        "mini-css-extract-plugin": "^1.3.4",
-        "parcel": "^2.0.0-beta.1",
-        "sass": "^1.32.5",
-        "sass-loader": "^10.1.1",
-        "style-loader": "^2.0.0"
+        "parcel": "^2.0.0-beta.1"
     },
     "dependencies": {
+        "@parcel/transformer-babel": "^2.0.0-alpha.3",
         "animejs": "^3.2.1",
         "autoprefixer": "^10.2.3",
         "babel-preset-env": "^1.7.0",
