--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "jeydi",
     "version": "1.0.0",
     "description": "",
-    "main": "index.html",
+    "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "parcel watch index.html"
+        "start": "webpack serve --hot --open"
     },
     "repository": {
         "type": "git",
@@ -19,19 +19,29 @@
     "homepage": "https://bitbucket.org/epa243/jeydi#readme",
     "devDependencies": {
         "@babel/core": "^7.12.10",
+        "@babel/plugin-external-helpers": "^7.12.1",
         "@babel/preset-env": "^7.12.11",
+        "@rollup/plugin-babel": "^5.2.2",
+        "@rollup/plugin-commonjs": "^17.0.0",
+        "@rollup/plugin-node-resolve": "^11.1.0",
         "babel": "^6.23.0",
         "babel-core": "^6.26.3",
         "babel-loader": "^8.2.2",
         "css-loader": "^5.0.1",
-        "parcel": "^2.0.0-beta.1"
+        "mini-css-extract-plugin": "^1.3.5",
+        "rollup": "^2.38.0",
+        "rollup-plugin-merge-and-inject-css": "^1.1.3",
+        "rollup-plugin-url": "^3.0.1",
+        "webpack": "^5.20.1",
+        "webpack-cli": "^4.5.0",
+        "webpack-dev-server": "^3.11.2"
     },
     "dependencies": {
-        "@parcel/transformer-babel": "^2.0.0-alpha.3",
         "animejs": "^3.2.1",
         "autoprefixer": "^10.2.3",
         "babel-preset-env": "^1.7.0",
         "postcss": "^8.2.4",
+        "rollup-plugin-import-css": "^1.1.4",
         "scroll-out": "^2.2.12",
         "splitting": "^1.0.6",
         "tailwindcss": "^2.0.2"
