--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack serve --hot --open"
+        "start": "webpack"
     },
     "repository": {
         "type": "git",
@@ -24,11 +24,15 @@
         "@rollup/plugin-babel": "^5.2.2",
         "@rollup/plugin-commonjs": "^17.0.0",
         "@rollup/plugin-node-resolve": "^11.1.0",
+        "autoprefixer": "^10.2.4",
         "babel": "^6.23.0",
         "babel-core": "^6.26.3",
         "babel-loader": "^8.2.2",
         "css-loader": "^5.0.1",
+        "css-minimizer-webpack-plugin": "^1.2.0",
         "mini-css-extract-plugin": "^1.3.5",
+        "postcss-cli": "^8.3.1",
+        "postcss-loader": "^5.0.0",
         "rollup": "^2.38.0",
         "rollup-plugin-merge-and-inject-css": "^1.1.3",
         "rollup-plugin-url": "^3.0.1",
@@ -38,7 +42,6 @@
     },
     "dependencies": {
         "animejs": "^3.2.1",
-        "autoprefixer": "^10.2.3",
         "babel-preset-env": "^1.7.0",
         "postcss": "^8.2.4",
         "rollup-plugin-import-css": "^1.1.4",
