--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "rollup": "^2.38.0",
         "rollup-plugin-merge-and-inject-css": "^1.1.3",
         "rollup-plugin-url": "^3.0.1",
+        "url-loader": "^4.1.1",
         "webpack": "^5.20.1",
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^3.11.2"
@@ -43,6 +44,8 @@
     "dependencies": {
         "animejs": "^3.2.1",
         "babel-preset-env": "^1.7.0",
+        "jump.js": "^1.0.2",
+        "locomotive-scroll": "^4.1.0",
         "postcss": "^8.2.4",
         "rollup-plugin-import-css": "^1.1.4",
         "scroll-out": "^2.2.12",
