--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "webpack-dev-server": "^3.11.2"
     },
     "dependencies": {
+        "@tailwindcss/aspect-ratio": "^0.2.0",
         "animejs": "^3.2.1",
         "babel-preset-env": "^1.7.0",
         "jump.js": "^1.0.2",
