--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
     "name": "jeydi",
     "version": "1.0.0",
-    "description": "",
+    "description": "A personal portfolio",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "start": "webpack"
     },
     "repository": {
