--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "babel-loader": "^8.2.2",
         "css-loader": "^5.0.1",
         "css-minimizer-webpack-plugin": "^1.2.0",
+        "file-loader": "^6.2.0",
         "mini-css-extract-plugin": "^1.3.5",
         "postcss-cli": "^8.3.1",
         "postcss-loader": "^5.0.0",
@@ -36,7 +37,7 @@
         "rollup-plugin-merge-and-inject-css": "^1.1.3",
         "rollup-plugin-url": "^3.0.1",
         "url-loader": "^4.1.1",
-        "webpack": "^5.20.1",
+        "webpack": "^5.27.2",
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^3.11.2"
     },
@@ -44,9 +45,11 @@
         "@tailwindcss/aspect-ratio": "^0.2.0",
         "animejs": "^3.2.1",
         "babel-preset-env": "^1.7.0",
+        "gap": "^0.3.0",
         "jump.js": "^1.0.2",
         "locomotive-scroll": "^4.1.0",
         "postcss": "^8.2.4",
+        "rallax.js": "^2.0.4",
         "rollup-plugin-import-css": "^1.1.4",
         "scroll-out": "^2.2.12",
         "splitting": "^1.0.6",
