--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "rollup": "^2.38.0",
         "rollup-plugin-merge-and-inject-css": "^1.1.3",
         "rollup-plugin-url": "^3.0.1",
+        "svg-inline-loader": "^0.8.2",
         "url-loader": "^4.1.1",
         "webpack": "^5.27.2",
         "webpack-cli": "^4.5.0",
