--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
         "css-loader": "^5.0.1",
         "css-minimizer-webpack-plugin": "^1.2.0",
         "file-loader": "^6.2.0",
+        "image-minimizer-webpack-plugin": "^2.2.0",
         "mini-css-extract-plugin": "^1.3.5",
         "postcss-cli": "^8.3.1",
         "postcss-loader": "^5.0.0",
         "rollup": "^2.38.0",
         "rollup-plugin-merge-and-inject-css": "^1.1.3",
         "rollup-plugin-url": "^3.0.1",
+        "sass-loader": "^11.1.0",
         "svg-inline-loader": "^0.8.2",
         "url-loader": "^4.1.1",
         "webpack": "^5.27.2",
@@ -47,6 +49,8 @@
         "animejs": "^3.2.1",
         "babel-preset-env": "^1.7.0",
         "gap": "^0.3.0",
+        "gsap": "^3.6.1",
+        "imagesloaded": "^4.1.4",
         "jump.js": "^1.0.2",
         "locomotive-scroll": "^4.1.0",
         "postcss": "^8.2.4",
