--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "editor.wordWrap": "wordWrapColumn",
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.wordWrapColumn": 250,
+    "liveServer.settings.port": 5501,
 
 }
