--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
     "name": "jeydi",
     "version": "1.0.0",
     "description": "A personal portfolio",
-    "main": "index.js",
+    "main": "src/js/index.js",
     "scripts": {
-        "start": "webpack"
+        "start": "webpack",
+        "start:parcel": "parcel public/index.html --open",
+        "clean": "rm -rf dist/*",
+        "build:parcel": "parcel build public/index.html --no-content-hash --no-minify --no-source-maps --public-url ./public",
+        "build": "npm run clean && npm run build:parcel"
     },
     "repository": {
         "type": "git",
@@ -33,10 +37,11 @@
         "image-minimizer-webpack-plugin": "^2.2.0",
         "mini-css-extract-plugin": "^1.3.5",
         "postcss-cli": "^8.3.1",
-        "postcss-loader": "^5.0.0",
+        "postcss-loader": "^5.2.0",
         "rollup": "^2.38.0",
         "rollup-plugin-merge-and-inject-css": "^1.1.3",
         "rollup-plugin-url": "^3.0.1",
+        "sass": "^1.32.12",
         "sass-loader": "^11.1.0",
         "svg-inline-loader": "^0.8.2",
         "url-loader": "^4.1.1",
@@ -53,7 +58,8 @@
         "imagesloaded": "^4.1.4",
         "jump.js": "^1.0.2",
         "locomotive-scroll": "^4.1.0",
-        "postcss": "^8.2.4",
+        "parcel-bundler": "^1.12.4",
+        "postcss": "^8.2.15",
         "rallax.js": "^2.0.4",
         "rollup-plugin-import-css": "^1.1.4",
         "scroll-out": "^2.2.12",
