--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "license": "ISC",
     "homepage": "https://bitbucket.org/epa243/jeydi#readme",
     "devDependencies": {
-        "@babel/core": "^7.12.10",
+        "@babel/core": "^7.14.3",
         "@babel/plugin-external-helpers": "^7.12.1",
-        "@babel/preset-env": "^7.12.11",
+        "@babel/preset-env": "^7.14.2",
         "@rollup/plugin-babel": "^5.2.2",
         "@rollup/plugin-commonjs": "^17.0.0",
         "@rollup/plugin-node-resolve": "^11.1.0",
@@ -31,13 +31,15 @@
         "babel": "^6.23.0",
         "babel-core": "^6.26.3",
         "babel-loader": "^8.2.2",
+        "babel-plugin-import-glob": "^2.0.0",
         "css-loader": "^5.0.1",
-        "css-minimizer-webpack-plugin": "^1.2.0",
+        "css-minimizer-webpack-plugin": "^2.0.0",
         "file-loader": "^6.2.0",
         "image-minimizer-webpack-plugin": "^2.2.0",
+        "imagemin-svgo": "^9.0.0",
         "mini-css-extract-plugin": "^1.3.5",
         "postcss-cli": "^8.3.1",
-        "postcss-loader": "^5.2.0",
+        "postcss-loader": "^5.3.0",
         "rollup": "^2.38.0",
         "rollup-plugin-merge-and-inject-css": "^1.1.3",
         "rollup-plugin-url": "^3.0.1",
@@ -52,13 +54,16 @@
     "dependencies": {
         "@tailwindcss/aspect-ratio": "^0.2.0",
         "animejs": "^3.2.1",
+        "babel-plugin-wildcard": "^7.0.0",
         "babel-preset-env": "^1.7.0",
+        "caniuse-lite": "^1.0.30001228",
         "gap": "^0.3.0",
         "gsap": "^3.6.1",
         "imagesloaded": "^4.1.4",
         "jump.js": "^1.0.2",
         "locomotive-scroll": "^4.1.0",
-        "parcel-bundler": "^1.12.4",
+        "node-polyfill-webpack-plugin": "^1.1.2",
+        "parcel-bundler": "^1.10.3",
         "postcss": "^8.2.15",
         "rallax.js": "^2.0.4",
         "rollup-plugin-import-css": "^1.1.4",
