--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     },
     "dependencies": {
         "@tailwindcss/aspect-ratio": "^0.2.0",
+        "@tailwindcss/forms": "^0.3.3",
         "animejs": "^3.2.1",
         "babel-plugin-wildcard": "^7.0.0",
         "babel-preset-env": "^1.7.0",
@@ -69,6 +70,6 @@
         "rollup-plugin-import-css": "^1.1.4",
         "scroll-out": "^2.2.12",
         "splitting": "^1.0.6",
-        "tailwindcss": "^2.0.2"
+        "tailwindcss": "^2.2.0"
     }
 }
