--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,7 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.wordWrapColumn": 250,
     "liveServer.settings.port": 5501,
+    "liveServer.settings.CustomBrowser": "firefox",
+    "editor.smoothScrolling": true,
+    "workbench.colorTheme": "Winter is Coming (Dark Blue - No Italics)"
 }
