--- a/package.json
+++ b/package.json
@@ -37,14 +37,16 @@
         "file-loader": "^6.2.0",
         "image-minimizer-webpack-plugin": "^2.2.0",
         "imagemin-svgo": "^9.0.0",
+        "less-loader": "^10.0.1",
         "mini-css-extract-plugin": "^1.3.5",
         "postcss-cli": "^8.3.1",
         "postcss-loader": "^5.3.0",
         "rollup": "^2.38.0",
         "rollup-plugin-merge-and-inject-css": "^1.1.3",
         "rollup-plugin-url": "^3.0.1",
-        "sass": "^1.32.12",
-        "sass-loader": "^11.1.0",
+        "sass": "^1.39.0",
+        "sass-loader": "^11.1.1",
+        "style-loader": "^3.2.1",
         "svg-inline-loader": "^0.8.2",
         "url-loader": "^4.1.1",
         "webpack": "^5.27.2",
@@ -61,6 +63,7 @@
         "gap": "^0.3.0",
         "gsap": "^3.6.1",
         "imagesloaded": "^4.1.4",
+        "jquery": "^3.6.0",
         "jump.js": "^1.0.2",
         "locomotive-scroll": "^4.1.1",
         "node-polyfill-webpack-plugin": "^1.1.2",
