--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
         "sass-loader": "^11.1.1",
         "style-loader": "^3.2.1",
         "svg-inline-loader": "^0.8.2",
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.4.4",
         "url-loader": "^4.1.1",
         "webpack": "^5.27.2",
         "webpack-cli": "^4.5.0",
@@ -61,7 +63,7 @@
         "babel-preset-env": "^1.7.0",
         "caniuse-lite": "^1.0.30001228",
         "gap": "^0.3.0",
-        "gsap": "^3.6.1",
+        "gsap": "^3.8",
         "imagesloaded": "^4.1.4",
         "jquery": "^3.6.0",
         "jump.js": "^1.0.2",
