--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
     "liveServer.settings.port": 5502,
     "liveServer.settings.CustomBrowser": "firefox",
     "editor.smoothScrolling": true,
-    "workbench.colorTheme": "Winter is Coming (Dark Blue - No Italics)"
+    "workbench.colorTheme": "Electron vue darker"
 }
