--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "src/js/index.js",
     "scripts": {
         "start": "webpack",
-        "start:parcel": "parcel public/index.html --open",
+        "start:parcel": "parcel public/index2.html --open",
         "clean": "rm -rf dist/*",
         "build:parcel": "parcel build public/index.html --no-content-hash --no-minify --no-source-maps --public-url ./public",
         "build": "npm run clean && npm run build:parcel"
@@ -57,11 +57,10 @@
     },
     "dependencies": {
         "@tailwindcss/aspect-ratio": "^0.2.0",
-        "@tailwindcss/forms": "^0.3.3",
+        "@tailwindcss/forms": "^0.4.0",
         "animejs": "^3.2.1",
         "babel-plugin-wildcard": "^7.0.0",
         "babel-preset-env": "^1.7.0",
-        "caniuse-lite": "^1.0.30001228",
         "gap": "^0.3.0",
         "gsap": "^3.8",
         "imagesloaded": "^4.1.4",
@@ -75,6 +74,6 @@
         "rollup-plugin-import-css": "^1.1.4",
         "scroll-out": "^2.2.12",
         "splitting": "^1.0.6",
-        "tailwindcss": "^2.2.0"
+        "tailwindcss": "^3.0.0"
     }
 }
